--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -19,71 +19,116 @@
     задачу</a>
   <div class="row">
     <div class="col-md-4">
-      <h2>BACKLOG</h2>
-      <div class="card-group">
-        <div th:each="task : ${tasks}" th:if="${task.status == 'BACKLOG'}">
-          <div class="card mb-2">
-            <div class="card-body">
-              <h5 class="card-title" th:text="${task.name}"></h5>
-              <h6 class="card-subtitle mb-2 text-muted" th:text="${task.author}"></h6>
-              <p class="card-text" th:text="${task.performer}"></p>
-              <a th:href="@{/{projId}/{taskId}(projId=${task.project.id}, taskId=${task.id})}"
-                 class="btn btn-sm btn-primary mr-2">Просмотреть</a>
-              <a th:href="@{/{projId}/{taskId}/edit(projId=${task.project.id}, taskId=${task.id})}"
-                 class="btn btn-sm btn-info">Редактировать</a>
-              <a th:href="@{/{projId}/{taskId}/delete(projId=${task.project.id}, taskId=${task.id})}"
-                 onclick="return confirm('Вы действительно хотите удалить эту задачу?')"
-                 class="btn btn-sm btn-danger">Удалить</a>
+      <div class="card text-bg-light mb-3">
+        <div class="card-header">BACKLOG</div>
+        <div class="card-body w-100">
+          <div class="card-group">
+            <div th:each="task : ${tasks}" th:if="${task.status == 'BACKLOG'}">
+              <div class="card mb-2 bg-transparent border-dark">
+                <div class="card-body" style="min-width: 24rem;">
+                  <h5 class="card-title" th:text="${task.name}"></h5>
+                  <h6 class="card-subtitle mb-4 text-muted" th:text="${task.author}"></h6>
+                  <h6 class="card-subtitle mb-2 text-muted" th:text="${task.performer}"></h6>
+                </div>
+                <div class="btn-group">
+                  <button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button"
+                          data-bs-toggle="dropdown" aria-expanded="false">
+                    Действия
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item"
+                           th:href="@{/{projId}/{taskId}(projId=${task.project.id}, taskId=${task.id})}">Просмотреть</a>
+                    </li>
+                    <li><a class="dropdown-item"
+                           th:href="@{/{projId}/{taskId}/edit(projId=${task.project.id}, taskId=${task.id})}">Редактировать</a>
+                    </li>
+                    <li><a class="dropdown-item"
+                           th:href="@{/{projId}/{taskId}/delete(projId=${task.project.id}, taskId=${task.id})}"
+                           onclick="return confirm('Вы действительно хотите удалить эту задачу?')">Удалить</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-      <h2>IN PROGRESS</h2>
-      <div class="card-group">
-        <div th:each="task : ${tasks}" th:if="${task.status == 'IN_PROGRESS'}">
-          <div class="card mb-2">
-            <div class="card-body">
-              <h5 class="card-title" th:text="${task.name}"></h5>
-              <h6 class="card-subtitle mb-2 text-muted" th:text="${task.author}"></h6>
-              <p class="card-text" th:text="${task.performer}"></p>
-              <a th:href="@{/{projId}/{taskId}(projId=${task.project.id}, taskId=${task.id})}"
-                 class="btn btn-sm btn-primary mr-2">Просмотреть</a>
-              <a th:href="@{/{projId}/{taskId}/edit(projId=${task.project.id}, taskId=${task.id})}"
-                 class="btn btn-sm btn-info">Редактировать</a>
-              <a th:href="@{/{projId}/{taskId}/delete(projId=${task.project.id}, taskId=${task.id})}"
-                 onclick="return confirm('Вы действительно хотите удалить эту задачу?')"
-                 class="btn btn-sm btn-danger">Удалить</a>
+      <div class="card text-bg-light mb-3">
+        <div class="card-header">IN PROGRESS</div>
+        <div class="card-body w-100">
+          <div class="card-group">
+            <div th:each="task : ${tasks}" th:if="${task.status == 'IN_PROGRESS'}">
+              <div class="card mb-2 bg-transparent border-dark">
+                <div class="card-body" style="min-width: 24rem;">
+                  <h5 class="card-title" th:text="${task.name}"></h5>
+                  <h6 class="card-subtitle mb-4 text-muted" th:text="${task.author}"></h6>
+                  <h6 class="card-subtitle mb-2 text-muted" th:text="${task.performer}"></h6>
+                </div>
+                <div class="btn-group">
+                  <button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button"
+                          data-bs-toggle="dropdown" aria-expanded="false">
+                    Действия
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item"
+                           th:href="@{/{projId}/{taskId}(projId=${task.project.id}, taskId=${task.id})}">Просмотреть</a>
+                    </li>
+                    <li><a class="dropdown-item"
+                           th:href="@{/{projId}/{taskId}/edit(projId=${task.project.id}, taskId=${task.id})}">Редактировать</a>
+                    </li>
+                    <li><a class="dropdown-item"
+                           th:href="@{/{projId}/{taskId}/delete(projId=${task.project.id}, taskId=${task.id})}"
+                           onclick="return confirm('Вы действительно хотите удалить эту задачу?')">Удалить</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-      <h2>DONE</h2>
-      <div class="card-group">
-        <div th:each="task : ${tasks}" th:if="${task.status == 'DONE'}">
-          <div class="card mb-2">
-            <div class="card-body">
-              <h5 class="card-title" th:text="${task.name}"></h5>
-              <h6 class="card-subtitle mb-2 text-muted" th:text="${task.author}"></h6>
-              <p class="card-text" th:text="${task.performer}"></p>
-              <a th:href="@{/{projId}/{taskId}(projId=${task.project.id}, taskId=${task.id})}"
-                 class="btn btn-sm btn-primary mr-2">Просмотреть</a>
-              <a th:href="@{/{projId}/{taskId}/edit(projId=${task.project.id}, taskId=${task.id})}"
-                 class="btn btn-sm btn-info">Редактировать</a>
-              <a th:href="@{/{projId}/{taskId}/delete(projId=${task.project.id}, taskId=${task.id})}"
-                 onclick="return confirm('Вы действительно хотите удалить эту задачу?')"
-                 class="btn btn-sm btn-danger">Удалить</a>
+      <div class="card text-bg-light mb-3">
+        <div class="card-header">DONE</div>
+        <div class="card-body w-100">
+          <div class="card-group">
+            <div th:each="task : ${tasks}" th:if="${task.status == 'DONE'}">
+              <div class="card mb-2 bg-transparent border-dark">
+                <div class="card-body" style="min-width: 24rem;">
+                  <h5 class="card-title" th:text="${task.name}"></h5>
+                  <h6 class="card-subtitle mb-4 text-muted" th:text="${task.author}"></h6>
+                  <h6 class="card-subtitle mb-2 text-muted" th:text="${task.performer}"></h6>
+                </div>
+                <div class="btn-group">
+                  <button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button"
+                          data-bs-toggle="dropdown" aria-expanded="false">
+                    Действия
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item"
+                           th:href="@{/{projId}/{taskId}(projId=${task.project.id}, taskId=${task.id})}">Просмотреть</a>
+                    </li>
+                    <li><a class="dropdown-item"
+                           th:href="@{/{projId}/{taskId}/edit(projId=${task.project.id}, taskId=${task.id})}">Редактировать</a>
+                    </li>
+                    <li><a class="dropdown-item"
+                           th:href="@{/{projId}/{taskId}/delete(projId=${task.project.id}, taskId=${task.id})}"
+                           onclick="return confirm('Вы действительно хотите удалить эту задачу?')">Удалить</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <br>
   <a class="btn btn-secondary" href="/">Назад к проектам</a>
+  <br>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
